samples/_failures_safe/1761515985_f56af3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_33fe130a.c: In function ‘main’:
./samples/SAFE/__tmp_33fe130a.c:134:16: error: missing terminating " character
  134 |         printf("Failed to initialize output buffer
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_33fe130a.c:134:9: error: expected expression at end of input
  134 |         printf("Failed to initialize output buffer
      |         ^~~~~~
./samples/SAFE/__tmp_33fe130a.c:134:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_33fe130a.c:134:9: error: expected declaration or statement at end of input
